--- a/.github/workflows/milestone_sync.yaml
+++ b/.github/workflows/milestone_sync.yaml
@@ -1,30 +1,14 @@
-name: Sync Milestone to Sub-issues
+name: Milestone Sync
 
 on:
-  issues:
-    types:
-      - milestoned
-      # Use the correct event type for removal
-      - demilestoned
-      # Keep 'edited' as a fallback, though demilestoned should be primary
-      - edited
+  workflow_dispatch:
 
 permissions:
-  issues: write
-  contents: read
+  contents: write
 
 jobs:
-  sync_milestone:
+  sync-milestones:
     runs-on: ubuntu-latest
-    # --- MODIFIED JOB CONDITION ---
-    # Run if:
-    # 1. The action is specifically 'milestoned' OR
-    # 2. The action is specifically 'demilestoned' OR  <-- Added this check
-    # 3. The action is 'edited' AND the 'milestone' field was part of the change
-    if: |
-      github.event.action == 'milestoned' ||
-      github.event.action == 'demilestoned' ||
-      (github.event.action == 'edited' && github.event.changes.milestone)
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -38,14 +22,21 @@ jobs:
         run: pip install requests
 
       - name: Run Milestone Sync Script
+        run: python .github/scripts/sync_backlog_sprints.py
         env:
-          # Use the PAT stored in the secret
-          GITHUB_TOKEN: ${{ secrets.milestone_sync }}
-          # Get data from the event payload
-          PARENT_ISSUE_NODE_ID: ${{ github.event.issue.node_id }}
-          # This correctly passes the number if milestoned, or empty string if demilestoned/edited-to-remove
-          PARENT_MILESTONE_NUMBER: ${{ github.event.issue.milestone.number }}
-          PROJECT_ID: "PVT_kwDODH0FwM4A3yi4" # Your specific ProjectV2 Node ID
-          REPO_OWNER: ${{ github.repository_owner }}
-          REPO_NAME: ${{ github.event.repository.name }}
-        run: python .github/scripts/sync_milestone.py
+          MILESTONE_SYNC_TOKEN: ${{ secrets.MILESTONE_SYNC }}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+
+      - name: Commit and push milestone sync results
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add agilereportingmetadata/*.csv
+          if git diff --staged --quiet; then
+            echo "Milestone sync output is up-to-date. Nothing to commit."
+          else
+            git commit -m "Update milestone sync output (automated)"
+            git push
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
