--- a/.github/workflows/daily_milestone_metadata.yaml
+++ b/.github/workflows/daily_milestone_metadata.yaml
@@ -29,16 +29,18 @@ jobs:
         env:
           MILESTONE_SYNC_TOKEN: ${{ secrets.MILESTONE_SYNC }}
           PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: ${{ github.event.repository.name }}
 
-      - name: Commit and push SprintMetaData.csv if changed
+      - name: Commit and push milestone_metadata.csv if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add agilereportingmetadata/SprintMetaData.csv 2>/dev/null || true
+          git add agilereportingmetadata/milestone_metadata.csv 2>/dev/null || true
           if git diff --staged --quiet; then
-            echo "SprintMetaData.csv is up-to-date. Nothing to commit."
+            echo "milestone_metadata.csv is up-to-date. Nothing to commit."
           else
-            git commit -m "Update SprintMetaData.csv (automated daily run)"
+            git commit -m "Update milestone_metadata.csv (automated daily run)"
             git push
           fi
         env:
