--- a/.github/workflows/inherit_fields.yaml
+++ b/.github/workflows/inherit_fields.yaml
@@ -1,18 +1,14 @@
-name: Inherit Parent Issue Fields
+name: Inherit Fields on Sub-Issue Creation
 
 on:
   issues:
     types: [opened]
 
-permissions:
-  issues: write
-  contents: read
-
 jobs:
   inherit-fields:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -20,19 +16,20 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Python Dependencies
+      - name: Install Python dependencies
         run: pip install requests
 
-      - name: Run Field Inheritance Script
+      # Create issue step here if you use one, e.g.:
+      # - id: create_issue
+      #   name: Create issue
+      #   run: echo "Simulated" # Replace with your actual issue creation
+
+      - name: Run inherit fields script
+        run: python .github/scripts/inherit_fields.py
         env:
-          # Use a custom PAT if needed, otherwise use GITHUB_TOKEN
-          GITHUB_TOKEN: ${{ secrets.milestone_sync }}
-          # Pass data about the newly opened issue
-          NEW_ISSUE_NODE_ID: ${{ github.event.issue.node_id }}
-          NEW_ISSUE_NUMBER: ${{ github.event.issue.number }}
-          # Pass repository context
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NEW_ISSUE_NODE_ID: ${{ steps.create_issue.outputs.node_id }}
+          NEW_ISSUE_NUMBER: ${{ steps.create_issue.outputs.issue_number }}
           REPO_OWNER: ${{ github.repository_owner }}
           REPO_NAME: ${{ github.event.repository.name }}
-          # Use repository variable for the ProjectV2 Node ID (recommended, no hardcoded fallback)
-          PROJECT_ID: ${{ vars.PROJECT_V2_NODE_ID }}
-        run: python .github/scripts/inherit_fields.py
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
