--- a/.github/workflows/milestone_sync.yaml
+++ b/.github/workflows/milestone_sync.yaml
@@ -1,14 +1,30 @@
-name: Milestone Sync
+name: Sync Milestone to Sub-issues
 
 on:
-  workflow_dispatch:
+  issues:
+    types:
+      - milestoned
+      # Use the correct event type for removal
+      - demilestoned
+      # Keep 'edited' as a fallback, though demilestoned should be primary
+      - edited
 
 permissions:
-  contents: write
+  issues: write
+  contents: read
 
 jobs:
-  sync-milestones:
+  sync_milestone:
     runs-on: ubuntu-latest
+    # --- MODIFIED JOB CONDITION ---
+    # Run if:
+    # 1. The action is specifically 'milestoned' OR
+    # 2. The action is specifically 'demilestoned' OR
+    # 3. The action is 'edited' AND the 'milestone' field was part of the change
+    if: |
+      github.event.action == 'milestoned' ||
+      github.event.action == 'demilestoned' ||
+      (github.event.action == 'edited' && github.event.changes.milestone)
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -22,21 +38,11 @@ jobs:
         run: pip install requests
 
       - name: Run Milestone Sync Script
-        run: python .github/scripts/sync_backlog_sprints.py
         env:
-          MILESTONE_SYNC_TOKEN: ${{ secrets.MILESTONE_SYNC }}
+          GITHUB_TOKEN: ${{ secrets.milestone_sync }}
+          PARENT_ISSUE_NODE_ID: ${{ github.event.issue.node_id }}
+          PARENT_MILESTONE_NUMBER: ${{ github.event.issue.milestone.number }}
           PROJECT_ID: ${{ secrets.PROJECT_ID }}
-
-      - name: Commit and push milestone sync results
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add agilereportingmetadata/*.csv
-          if git diff --staged --quiet; then
-            echo "Milestone sync output is up-to-date. Nothing to commit."
-          else
-            git commit -m "Update milestone sync output (automated)"
-            git push
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: ${{ github.event.repository.name }}
+        run: python .github/scripts/sync_milestone.py
