--- a/.github/workflows/analyze-backlog-health.yml
+++ b/.github/workflows/analyze-backlog-health.yml
@@ -7,6 +7,9 @@ on:
       - 'agilereporting/latest_snapshot.csv'
       - '.github/scripts/analyze_hierarchy.py'
 
+permissions:
+  contents: write
+
 jobs:
   analyze-hierarchy:
     runs-on: ubuntu-latest
@@ -24,9 +27,12 @@ jobs:
         run: python .github/scripts/analyze_hierarchy.py
 
       - name: Commit results
+        env:
+          GH_TOKEN: ${{ secrets.MILESTONE_SYNC }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           git add backloghealth/hierarchy_violations.csv
           git commit -m "Update hierarchy_violations.csv [bot]" || echo "No changes to commit"
-          git push
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
